--- a/packages/core.authentication/package.json
+++ b/packages/core.authentication/package.json
@@ -7,7 +7,7 @@
         "authentication",
         "user-authentication"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -31,19 +31,19 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/core.mysql": "1",
-        "@thermopylae/core.redis": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/core.mysql": "^2.0.0",
+        "@thermopylae/core.redis": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "farmhash": "4.0.1",
         "fast-json-stable-stringify": "2.1.0"
     },
     "devDependencies": {
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.utils": "1",
-        "@thermopylae/dev.environment": "1",
-        "@thermopylae/lib.authentication": "1",
-        "@thermopylae/core.logger": "1",
+        "@thermopylae/core.logger": "^2.0.0",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
+        "@thermopylae/lib.authentication": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0",
         "@types/faker": "6.6.11",
         "dotenv": "16.4.7",
         "faker": "6.6.6"
