--- a/packages/core.jwt-session/package.json
+++ b/packages/core.jwt-session/package.json
@@ -8,7 +8,7 @@
         "jwt",
         "user-session"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -32,20 +32,20 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/core.logger": "1",
-        "@thermopylae/core.user-session.commons": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/core.logger": "^2.0.0",
+        "@thermopylae/core.user-session.commons": "^2.0.0",
         "@thermopylae/lib.cache": "1",
-        "@thermopylae/lib.exception": "1",
-        "@thermopylae/lib.jwt-user-session": "1",
+        "@thermopylae/lib.exception": "^2.0.0",
+        "@thermopylae/lib.jwt-user-session": "^2.0.0",
         "cookie": "1.0.2"
     },
     "devDependencies": {
-        "@thermopylae/core.adapter.fastify": "1",
-        "@thermopylae/core.redis": "1",
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.user-session.commons": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/core.adapter.fastify": "^2.0.0",
+        "@thermopylae/core.redis": "^2.0.0",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
+        "@thermopylae/lib.user-session.commons": "^2.0.0",
         "@types/benchmark": "2.1.5",
         "@types/capitalize": "2.0.2",
         "@types/cookie": "1.0.0",
