--- a/packages/core.logger/package.json
+++ b/packages/core.logger/package.json
@@ -6,7 +6,7 @@
         "core",
         "logger"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -30,17 +30,17 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "chalk": "5.4.1",
         "winston": "3.17.0",
         "winston-daily-rotate-file": "5.0.0",
         "winston-graylog2": "2.1.2"
     },
     "devDependencies": {
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.utils": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0",
         "moment": "2.30.1"
     },
     "peerDependencies": {
