--- a/packages/core.mysql/package.json
+++ b/packages/core.mysql/package.json
@@ -7,7 +7,7 @@
         "mysql",
         "client"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -31,13 +31,13 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
-        "@thermopylae/core.logger": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/core.logger": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "mysql2": "3.14.0"
     },
     "devDependencies": {
-        "@thermopylae/dev.environment": "1"
+        "@thermopylae/dev.environment": "^2.0.0"
     },
     "lint-staged": {
         "*.ts": [
