--- a/packages/core.user-session.commons/package.json
+++ b/packages/core.user-session.commons/package.json
@@ -7,7 +7,7 @@
         "session",
         "user-session"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -30,18 +30,18 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/core.redis": "1",
-        "@thermopylae/lib.exception": "1",
-        "@thermopylae/core.logger": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/core.logger": "^2.0.0",
+        "@thermopylae/core.redis": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "avsc": "5.7.7",
         "fast-json-stringify": "6.0.1",
         "lodash.clonedeep": "4.5.0"
     },
     "devDependencies": {
-        "@thermopylae/lib.user-session": "1",
-        "@thermopylae/lib.user-session.commons": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/lib.user-session": "^2.0.0",
+        "@thermopylae/lib.user-session.commons": "^2.0.0",
         "@types/lodash.clonedeep": "4.5.9"
     },
     "lint-staged": {
