--- a/packages/demo.express/package.json
+++ b/packages/demo.express/package.json
@@ -7,7 +7,7 @@
         "express",
         "web-app"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
@@ -31,21 +31,21 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.adapter.express": "1",
-        "@thermopylae/core.authentication": "1",
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/core.jwt-session": "1",
-        "@thermopylae/core.logger": "1",
-        "@thermopylae/core.mysql": "1",
-        "@thermopylae/core.redis": "1",
-        "@thermopylae/core.user-session.commons": "1",
-        "@thermopylae/lib.api-validator": "1",
-        "@thermopylae/lib.authentication": "1",
-        "@thermopylae/lib.email": "1",
-        "@thermopylae/lib.exception": "1",
-        "@thermopylae/lib.geoip": "1",
-        "@thermopylae/lib.jwt-user-session": "1",
-        "@thermopylae/lib.sms": "1",
+        "@thermopylae/core.adapter.express": "^2.0.0",
+        "@thermopylae/core.authentication": "^2.0.0",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/core.jwt-session": "^2.0.0",
+        "@thermopylae/core.logger": "^2.0.0",
+        "@thermopylae/core.mysql": "^2.0.0",
+        "@thermopylae/core.redis": "^2.0.0",
+        "@thermopylae/core.user-session.commons": "^2.0.0",
+        "@thermopylae/lib.api-validator": "^2.0.0",
+        "@thermopylae/lib.authentication": "^2.0.0",
+        "@thermopylae/lib.email": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
+        "@thermopylae/lib.geoip": "^2.0.0",
+        "@thermopylae/lib.jwt-user-session": "^2.0.0",
+        "@thermopylae/lib.sms": "^2.0.0",
         "body-parser": "2.2.0",
         "cookie-parser": "1.4.7",
         "deep-freeze": "0.0.1",
@@ -62,8 +62,8 @@
         "node-fetch": "3.3.2"
     },
     "devDependencies": {
-        "@thermopylae/dev.environment": "1",
-        "@thermopylae/dev.unit-test": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@types/cookie-parser": "1.4.8",
         "@types/deep-freeze": "0.1.5",
         "@types/express-request-id": "3.0.2",
