--- a/packages/lib.api-validator/package.json
+++ b/packages/lib.api-validator/package.json
@@ -9,7 +9,7 @@
         "api-validator",
         "ajv"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -33,16 +33,16 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.utils": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0",
         "ajv": "8.17.1",
         "ajv-formats": "3.0.1",
         "ajv-i18n": "4.2.0",
         "xss": "1.0.15"
     },
     "devDependencies": {
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/dev.environment": "1"
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0"
     },
     "lint-staged": {
         "*.ts": [
