--- a/packages/lib.authentication/package.json
+++ b/packages/lib.authentication/package.json
@@ -7,7 +7,7 @@
         "authentication",
         "user-authentication"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -34,8 +34,8 @@
         "@otplib/core": "12.0.1",
         "@otplib/plugin-crypto": "12.0.1",
         "@otplib/plugin-thirty-two": "12.0.1",
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "argon2": "0.41.1",
         "node-fetch": "3.3.2",
         "qrcode": "1.5.4",
@@ -44,10 +44,10 @@
         "zxcvbn": "4.4.2"
     },
     "devDependencies": {
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@thermopylae/lib.cache": "1",
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.utils": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/lib.utils": "^2.0.0",
         "@types/bcrypt": "5.0.2",
         "@types/mongoose": "5.11.97",
         "@types/node-fetch": "2.6.12",
