--- a/packages/lib.email/package.json
+++ b/packages/lib.email/package.json
@@ -8,7 +8,7 @@
         "client",
         "nodemailer"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
@@ -35,9 +35,9 @@
         "nodemailer": "6.10.0"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@types/nodemailer": "6.4.17",
         "dotenv": "16.4.7"
     },
