--- a/packages/lib.geoip/package.json
+++ b/packages/lib.geoip/package.json
@@ -6,7 +6,7 @@
         "library",
         "geoip"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
@@ -30,15 +30,15 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
-        "@thermopylae/lib.utils": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0",
         "geoip-lite": "1.4.10",
         "node-fetch": "3.3.2"
     },
     "devDependencies": {
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@types/geoip-lite": "1.4.4",
         "dotenv": "16.4.7"
     },
