--- a/packages/lib.heap/package.json
+++ b/packages/lib.heap/package.json
@@ -6,7 +6,7 @@
         "library",
         "heap"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -30,13 +30,13 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
         "lodash.isfunction": "3.0.9"
     },
     "devDependencies": {
-        "@thermopylae/dev.environment": "1",
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.utils": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0",
         "@types/lodash.isfunction": "3.0.9"
     },
     "lint-staged": {
