--- a/packages/lib.indexed-store/package.json
+++ b/packages/lib.indexed-store/package.json
@@ -9,7 +9,7 @@
         "storage",
         "indexed-store"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -33,14 +33,14 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "dot-prop": "9.0.0"
     },
     "devDependencies": {
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.utils": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0",
         "range-generator": "1.0.2"
     },
     "lint-staged": {
