--- a/packages/lib.jwt-user-session/package.json
+++ b/packages/lib.jwt-user-session/package.json
@@ -8,7 +8,7 @@
         "jwt",
         "user-session"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -32,16 +32,16 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "jsonwebtoken": "9.0.2",
         "uid-safe": "2.1.5"
     },
     "devDependencies": {
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@thermopylae/lib.cache": "1",
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.user-session.commons": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/lib.user-session.commons": "^2.0.0",
         "@types/jsonwebtoken": "9.0.9",
         "@types/uid-safe": "2.1.5"
     },
