--- a/packages/lib.pool/package.json
+++ b/packages/lib.pool/package.json
@@ -7,7 +7,7 @@
         "pool",
         "object-pool"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -31,15 +31,15 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "@types/yallist": "4.0.4",
         "yallist": "5.0.0"
     },
     "devDependencies": {
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.utils": "1",
-        "@thermopylae/dev.environment": "1"
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
+        "@thermopylae/lib.utils": "^2.0.0"
     },
     "lint-staged": {
         "*.ts": [
