--- a/packages/lib.user-session.commons/package.json
+++ b/packages/lib.user-session.commons/package.json
@@ -7,7 +7,7 @@
         "session",
         "user-session"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "types": "dist/index.d.ts",
@@ -29,11 +29,11 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
         "utility-types": "3.11.0"
     },
     "devDependencies": {
-        "@thermopylae/dev.environment": "1"
+        "@thermopylae/dev.environment": "^2.0.0"
     },
     "lint-staged": {
         "*.ts": [
