--- a/packages/lib.user-session/package.json
+++ b/packages/lib.user-session/package.json
@@ -7,7 +7,7 @@
         "session",
         "user-session"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "dist/index.js",
@@ -31,16 +31,16 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "uid-safe": "2.1.5"
     },
     "devDependencies": {
+        "@thermopylae/core.logger": "^2.0.0",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@thermopylae/lib.cache": "1",
-        "@thermopylae/core.logger": "1",
-        "@thermopylae/dev.unit-test": "1",
-        "@thermopylae/lib.user-session.commons": "1",
-        "@thermopylae/dev.environment": "1",
+        "@thermopylae/lib.user-session.commons": "^2.0.0",
         "@types/uid-safe": "2.1.5"
     },
     "lint-staged": {
