--- a/packages/lib.utils/package.json
+++ b/packages/lib.utils/package.json
@@ -6,7 +6,7 @@
         "library",
         "utils"
     ],
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "repository": "https://github.com/marinrusu1997/thermopylae",
     "main": "./dist/index.js",
@@ -33,16 +33,16 @@
         "@otplib/core": "12.0.1",
         "@otplib/plugin-crypto": "12.0.1",
         "@otplib/plugin-thirty-two": "12.0.1",
-        "@thermopylae/core.declarations": "1",
-        "@thermopylae/lib.exception": "1",
+        "@thermopylae/core.declarations": "^2.0.0",
+        "@thermopylae/lib.exception": "^2.0.0",
         "convert-hrtime": "5.0.0",
         "fast-copy": "3.0.2",
         "lodash.clone": "4.5.0",
         "uuid": "11.1.0"
     },
     "devDependencies": {
-        "@thermopylae/dev.environment": "1",
-        "@thermopylae/dev.unit-test": "1",
+        "@thermopylae/dev.environment": "^2.0.0",
+        "@thermopylae/dev.unit-test": "^2.0.0",
         "@types/lodash.clone": "4.5.9",
         "@types/uuid": "10.0.0"
     },
